derive/tests/snapshots/plain_table/Thing/get_all_things.snap
---
source: derive/src/characterization_tests.rs
---
impl<T: crate::spacetimedsl::WriteContext> crate::spacetimedsl::DSL<'_, T> {
    #[allow(clippy::needless_lifetimes, clippy::too_many_arguments)]
    ///Get all rows inside the `thing` table.
    pub fn get_all_things<'a>(&'a self) -> impl Iterator<Item = Thing> {
        use crate::spacetimedsl::Wrapper;
        use ::spacetimedb::{CtxDbRead, CtxDbWrite, Table as _};
        self.db().thing().iter()
    }
}
